# histogram-equalization

./: .gitignore  CMakeLists.txt  Parallelization Methodology.md  contrast-enhancement.cpp  contrast-mpi-openmp.cpp  contrast-mpi-x.cpp  contrast-mpi.cpp  contrast-openmp.cpp  contrast.cpp  hist-equ.h  histogram-equalization.cpp  image-processing.h  imageio.h  mpi-image-processing.h  omp-image-processing.h
